tests/machine/x/python/partial_application.error
line 0: run: exit status 1
Traceback (most recent call last):
  File "/workspace/mochi/tests/machine/x/python/partial_application.py", line 11, in <module>
    add5: typing.Callable[[int], int] = add(5)
                                        ^^^^^^
TypeError: add() missing 1 required positional argument: 'b'

# Generated by Mochi Python compiler
