tests/machine/x/python/partial_application.py
# Generated by Mochi Python compiler
from __future__ import annotations

import typing


def add(a: int, b: int) -> int:
    return a + b


add5: typing.Callable[[int], int] = add(5)


def main():
    global add5
    add5 = add(5)
    print(add5(3))


if __name__ == "__main__":
    main()
